<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BirdQ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="marathi">Marathi</string>
    <string name="english">English</string>
    <string name="GuessBird">Guess the Bird</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome_message">Test Your Knowledge of Birds</string>
    <string name="marathiStart">Click here</string>
    <string name="englishStart">इथे क्लिक करा</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
     <string name="noOfRecordsPerQuiz">Number of Birds</string>
    <string name="noOfRecordsPerQuizSummary">Number of Birds in Quiz</string>
     <string name="quizLang">Quiz Language </string>
    <string name="quizLangSummary">Language in which quiz is taken</string>
     <string name="appUrl">Application Url</string>
    <string name="appUrlSummary">Url to download quiz questions</string>    
    
    
    

</resources>